--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/linustorvalds/dicomux">dicomux</a>
-      <span class="small">by <a href="http://github.com/linustorvalds">linustorvalds</a></span></h1>
+    <h1><a href="http://github.com/linustorvalds/dicomux">Dicomux</a></h1>
 
     <div class="description">
       
@@ -57,11 +56,13 @@
 <h2>License</h2>
 <p>GPLv3</p>
 <h2>Authors</h2>
-<p>Heidi (thheidri@htwg-konstanz.de)<br/><br/>      </p>
+<p>Norbert (nostroh@htwg-konstanz.de)
+Tobi (tobi@schmidies.de)<br/>
+Heidi (thheidri@htwg-konstanz.de)<br/>
+</p>
 <h2>Contact</h2>
-<p> (heidixp@gmx.de)<br/>      </p>
-
-
+<p> (heidixp@gmx.de)
+<br/>      </p>
     <h2>Download</h2>
     <p>
       You can download this project in either
