added br after norbert

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2>License</h2>
 <p>GPLv3</p>
 <h2>Authors</h2>
-<p>Norbert (nostroh@htwg-konstanz.de)
+<p>Norbert (nostroh@htwg-konstanz.de)<br/>
 Tobi (tobi@schmidies.de)<br/>
 Heidi (thheidri@htwg-konstanz.de)<br/>
 </p>
