--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <p>GPLv3</p>
 <h2>Authors</h2>
 <p>Norbert (nostroh@htwg-konstanz.de)<br/>
-Tobi (tobi@schmidies.de)<br/>
+Tobi (toschmid@htwg-konstanz.de)<br/>
 Heidi (thheidri@htwg-konstanz.de)<br/>
 </p>
     <h2>Download</h2>
