made minimal change to index in order to trigger homepage rebuild

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <h2>License</h2>
 <p>GPLv3</p>
 <h2>Authors</h2>
-<p>Norbert (nostroh@htwg-konstanz.de)<br/>
+<p>
+Norbert (nostroh@htwg-konstanz.de)<br/>
 Tobi (toschmid@htwg-konstanz.de)<br/>
 Heidi (thheidri@htwg-konstanz.de)<br/>
 </p>
